--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "3.1.2",
+    "styled-components": "^4.4.0",
+    "styled-reset": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
